breaks script into 3 acts

--- a/script.scriv/QuickLook/Preview.html
+++ b/script.scriv/QuickLook/Preview.html
@@ -88,60 +88,29 @@
 
 <ul>
 <li>
-<p class="topLevelItemTitle">theExperiment</p>
+<p class="topLevelItemTitle">ACT I</p>
+<p class="itemText">A DETECTIVE HAS BEEN ASSIGNED A CASE. Fucking sick, yo!!</p>
 </li>
-<hr class="afterTitle"/>
-<ul>
-<li>
-<p class="itemTitle">1</p>
-<p class="itemText">I<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">THE EXPERIMENT<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">"I am glad you came, Clarke; very glad indeed. I was not sure you could spare the time."<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">"I was able to make arrangements for a few days; things are not very lively just now. But have you no misgivings, Raymond? Is it absolutely safe?"<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The two men were slowly pacing the terrace in front of Dr. Raymond's house. The sun still hung above the western mountain-line, but it shone with a dull red glow that cast no shadows, and all the air was quiet; a sweet breath came from the gre...</p>
-</li>
-</ul>
 <hr class="afterText"/>
-
-<li>
-<p class="topLevelItemTitle">MrClarkesMemoirs</p>
-</li>
-<hr class="afterTitle"/>
 <ul>
 <li>
-<p class="itemTitle">1</p>
-<p class="itemText">II<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">MR. CLARKE'S MEMOIRS<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Mr. Clarke, the gentleman chosen by Dr. Raymond to witness the strange experiment of the god Pan, was a person in whose character caution and curiosity were oddly mingled; in his sober moments he thought of the unusual and eccentric with undisguised aversion, and yet, deep in his heart, there was a wide-eyed inquisitiveness with respect to all the more recondite and esoteric elements in the nature of men. The latter tendency had prevailed when he accepted Raymond's invi...</p>
+<p class="itemTitle">TheSuicides</p>
+<p class="itemText">OPENING GAMBIT: THE MURDER OF ARGENTINE</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">READER DISCOVERS:<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- A murder????? Villiers is on the case</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- Mrs. Beaumont exists</p>
 </li>
-</ul>
-<hr class="afterText"/>
-
 <li>
-<p class="topLevelItemTitle">TheCityofRessurections</p>
+<p class="itemTitle">TheCityofRessurections</p>
+<p class="itemText">An avenue of investigation</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">READER DISCOVERS:</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- A seemingly unrelated cold case of a dead guy in an alley</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- Intro to Helen (via her first husband Herbert)</p>
 </li>
-<hr class="afterTitle"/>
-<ul>
 <li>
-<p class="itemTitle">1</p>
-<p class="itemText">III<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">THE CITY OF RESURRECTIONS<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">"Herbert! Good God! Is it possible?"<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">"Yes, my name's Herbert. I think I know your face, too, but I don't remember your name. My memory is very queer."<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">"Don't you recollect Villiers of Wadham?"<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">"So it is, so it is. I beg your pardon, Villiers, I didn't think I was begging of an old college friend. Good-night."<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">"My dear fellow, this haste is unnecessary. My rooms are close by, but we won't go there just yet. Suppose we walk up Shaftesbury Avenue a little way? Bu...</p>
-</li>
-</ul>
-<hr class="afterText"/>
-
-<li>
-<p class="topLevelItemTitle">TheDiscoveryInPaulStreet</p>
-</li>
-<hr class="afterTitle"/>
-<ul>
-<li>
-<p class="itemTitle">1</p>
+<p class="itemTitle">TheDiscoveryInPaulStreet</p>
 <p class="itemText">IV<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">THE DISCOVERY IN PAUL STREET<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">A few months after Villiers' meeting with Herbert, Mr. Clarke was sitting, as usual, by his after-dinner hearth, resolutely guarding his fancies from wandering in the direction of the bureau. For more than a week he had succeeded in keeping away from the "Memoirs," and he cherished hopes of a complete self-reformation; but, in spite of his endeavours, he could not hush the wonder and the strange curiosity that the last case he had written down had excited within...</p>
@@ -150,42 +119,17 @@
 <hr class="afterText"/>
 
 <li>
-<p class="topLevelItemTitle">TheLetterOfAdvice</p>
+<p class="topLevelItemTitle">ACT II</p>
+<p class="itemText">Here are some avenues you can investigate once you’ve investigate the first things</p>
 </li>
-<hr class="afterTitle"/>
-<ul>
-<li>
-<p class="itemTitle">1</p>
-<p class="itemText">V<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">THE LETTER OF ADVICE<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">"Do you know, Austin," said Villiers, as the two friends were pacing sedately along Piccadilly one pleasant morning in May, "do you know I am convinced that what you told me about Paul Street and the Herberts is a mere episode in an extraordinary history? I may as well confess to you that when I asked you about Herbert a few months ago I had just seen him."<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">"You had seen him? Where?"<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">"He begged of me in the street one night. He was in the most pitiable plight, but I re...</p>
-</li>
-</ul>
 <hr class="afterText"/>
-
-<li>
-<p class="topLevelItemTitle">TheSuicides</p>
-</li>
-<hr class="afterTitle"/>
 <ul>
 <li>
-<p class="itemTitle">1</p>
-<p class="itemText">VI<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">THE SUICIDES<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Lord Argentine was a great favourite in London Society. At twenty he had been a poor man, decked with the surname of an illustrious family, but forced to earn a livelihood as best he could, and the most speculative of money-lenders would not have entrusted him with fifty pounds on the chance of his ever changing his name for a title, and his poverty for a great fortune. His father had been near enough to the fountain of good things to secure one of the family livings, but the s...</p>
+<p class="itemTitle">TheLetterOfAdvice</p>
+<p class="itemText">My dude clarke says get off the case</p>
 </li>
-</ul>
-<hr class="afterText"/>
-
 <li>
-<p class="topLevelItemTitle">TheEncounterInSoho</p>
-</li>
-<hr class="afterTitle"/>
-<ul>
-<li>
-<p class="itemTitle">1</p>
+<p class="itemTitle">TheEncounterInSoho</p>
 <p class="itemText">VII<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">THE ENCOUNTER IN SOHO<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">Three weeks later Austin received a note from Villiers, asking him to call either that afternoon or the next. He chose the nearer date, and found Villiers sitting as usual by the window, apparently lost in meditation on the drowsy traffic of the street. There was a bamboo table by his side, a fantastic thing, enriched with gilding and queer painted scenes, and on it lay a little pile of papers arranged and docketed as neatly as anything in Mr. Clarke's office.<span class="Apple-converted-space"> </span></span></p></p>
@@ -195,12 +139,30 @@
 <hr class="afterText"/>
 
 <li>
-<p class="topLevelItemTitle">TheFragments</p>
+<p class="topLevelItemTitle">ACT III</p>
+<p class="itemText">Wrap this shit UP </p>
 </li>
-<hr class="afterTitle"/>
+<hr class="afterText"/>
 <ul>
 <li>
-<p class="itemTitle">1</p>
+<p class="itemTitle">TheExperiment</p>
+<p class="itemText">- An avenue of investigation</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">READER DISCOVERS</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- Helen’s parentage</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- Raymond is a evil scientist</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- Clarke is a weak-willed fuck</p>
+</li>
+<li>
+<p class="itemTitle">MrClarkesMemoirs</p>
+<p class="itemText">- An avenue of investigation</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">READER DISCOVERS:</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- Helen’s childhood</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- Rachel</p>
+</li>
+<li>
+<p class="itemTitle">TheFragments</p>
 <p class="itemText">VIII<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">THE FRAGMENTS<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">[Amongst the papers of the well-known physician, Dr. Robert Matheson, of Ashley Street, Piccadilly, who died suddenly, of apoplectic seizure, at the beginning of 1892, a leaf of manuscript paper was found, covered with pencil jottings. These notes were in Latin, much abbreviated, and had evidently been made in great haste. The MS. was only deciphered with difficulty, and some words have up to the present time evaded all the efforts of the expert employed. The date, "XXV Jul....</p>
