begins to cut and reorg material

--- a/script-1.scriv/QuickLook/Preview.html
+++ b/script-1.scriv/QuickLook/Preview.html
@@ -88,32 +88,47 @@
 
 <ul>
 <li>
+<p class="topLevelItemTitle">RABBIT-HOLE</p>
+<p class="itemText">@LordArgentine was a great favorite on the internet. He had a rich dad but no trust fund. He scrapped together a living selling bullshit on his account, a few bucks here and there.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">All dads die eventually though, and so one morning Charles Aubernon woke up and found that @LordArgentine was no longer a handle, but the title of a wealthy man. The situation amused him immensely, and he resolved that riches should be as pleasant to him as “poverty” had always been. Argentine, after some little consi...</p>
+</li>
+<li>
+<p class="topLevelItemTitle">BASIC OUTLINE</p>
+<p class="itemText">Struggling to rehash this, so gonna try to outline the story threads here:</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">RABBIT HOLE:</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- Villiers is investigating the death of @LordArgentine</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">INVESTIGATE LEVEL 1:</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- Check the case files</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>- More suicides</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- Talk to a begger</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>- Herbert tells u about his bad wife</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- Visit Clarke</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>- @LordArgentine was with Mrs. Beaumont before he died</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- Visit Austin</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>- Find out about Paul St murder<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">INVESTIGATE LEVEL 2:</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- Check out Paul St house</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>- Find pic of Helen</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">INVESTIGATE LEVEL 3:</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- Bring Helen pic to Clar...</p>
+</li>
+<li>
 <p class="topLevelItemTitle">ACT I</p>
 <p class="itemText">A DETECTIVE HAS BEEN ASSIGNED A CASE. Fucking sick, yo!!</p>
 </li>
 <hr class="afterText"/>
 <ul>
 <li>
-<p class="itemTitle">TheSuicides</p>
-<p class="itemText">OPENING GAMBIT: THE MURDER OF ARGENTINE</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">READER DISCOVERS:<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- A murder????? Villiers is on the case</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- Mrs. Beaumont exists</p>
+<p class="itemTitle">Check the case files</p>
+<p class="itemText">What do u know there are three other unexplained suicides</p>
 </li>
 <li>
-<p class="itemTitle">TheCityofRessurections</p>
-<p class="itemText">An avenue of investigation</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">READER DISCOVERS:</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- A seemingly unrelated cold case of a dead guy in an alley</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- Intro to Helen (via her first husband Herbert)</p>
-</li>
-<li>
-<p class="itemTitle">TheDiscoveryInPaulStreet</p>
-<p class="itemText">IV<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">THE DISCOVERY IN PAUL STREET<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">A few months after Villiers' meeting with Herbert, Mr. Clarke was sitting, as usual, by his after-dinner hearth, resolutely guarding his fancies from wandering in the direction of the bureau. For more than a week he had succeeded in keeping away from the "Memoirs," and he cherished hopes of a complete self-reformation; but, in spite of his endeavours, he could not hush the wonder and the strange curiosity that the last case he had written down had excited within...</p>
+<p class="itemTitle">Talk to a begger</p>
+<p class="itemText">Talk to a begger</p>
 </li>
 </ul>
 <hr class="afterText"/>
@@ -124,6 +139,21 @@
 </li>
 <hr class="afterText"/>
 <ul>
+<li>
+<p class="itemTitle">Visit Austin</p>
+<p class="itemText">K but make it not about herbert to start</p>
+</li>
+<li>
+<p class="itemTitle">Visit Clarke</p>
+<p class="itemText">investigate the house on paul st, find the picture of helen</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">clarke doesn’t rly need to be here, you can take the drawing to clarke later?</p>
+</li>
+<li>
+<p class="itemTitle">Visit Austin</p>
+<p class="itemText">A short while after the last of these terrible events, Austin came to see Mr. Villiers. He was curious to know whether Villiers had succeeded in discovering any fresh traces of Mrs. Herbert, either through Clarke or by other sources, and he asked the question soon after he had sat down.<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">"No," said Villiers, "I wrote to Clarke, but he remains obdurate, and I have tried other channels, but without any result. I can't find out what became of Helen Vaughan after she left Paul Street, but I think sh...</p>
+</li>
 <li>
 <p class="itemTitle">TheLetterOfAdvice</p>
 <p class="itemText">My dude clarke says get off the case</p>
