--- a/script-1.scriv/QuickLook/Preview.html
+++ b/script-1.scriv/QuickLook/Preview.html
@@ -88,122 +88,22 @@
 
 <ul>
 <li>
-<p class="topLevelItemTitle">BASIC OUTLINE</p>
-<p class="itemText">—OUTLINE—</span></p></p>
+<p class="topLevelItemTitle">Opening</p>
+<p class="itemText">You’re on the case!</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">RABBITHOLE</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- Lord Argentine dies</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Image of a bathroom mirror with August Villiers’ face looking haggard. The mirror is one of those dumb “smart” mirrors with an electronic message from @Cheif on it.</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">INVESTIGATION 1</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- Meet Herbert, learn about Helen</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- Talk to Austin, learn about Paul St death</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- Look at case files, learn about other suicides<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- Learn who Pan is</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">INVESTIGATION 2</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- Go to Paul street, find drawing of Helen</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- Talk to Austin, learn about mrs beaumont and that @LordArgentine was there before he died</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- Talk to Clarke, who tells you to maybe quit it</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- Find an old blog post from Herbert’s wife about her experience introducing Rachel to Pan</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">...</p>
+<p class="itemText"><p class="p1"><span class="s1">Good morning, Detective August Villiers. You’ve just finished up a really boring case for the bureau yesterday morning and maybe celebrated a teensy bit too hard last night at TK CLUB NAME. You’re known (but not really loved at work per say) for your paranormal investigations and you look really good in silhouet...</p>
 </li>
 <li>
-<p class="topLevelItemTitle">RABBIT-HOLE</p>
-<p class="itemText">@LordArgentine was a great favorite on the internet. He had a rich dad but no trust fund. He scrapped together a living selling bullshit on his account, a few bucks here and there.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">All dads die eventually though, and so one morning Charles Aubernon woke up and found that @LordArgentine was no longer a handle, but the title of a wealthy man. The situation amused him immensely, and he resolved that riches should be as pleasant to him as “poverty” had always been. Argentine, after some little consi...</p>
+<p class="topLevelItemTitle">RABBIT-HOLE-1</p>
+<p class="itemText">The death of @LordArgentine</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Image of newspaper with headline “XYZ” and a secondary headline that is dependent on the chaos meter</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">The chief bombards you with a newspaper basically as you walk in the door. “You’ve SEEN THIS, RIGHT????”</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Read the obituary</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">@LordArgentine was a great favorite on the internet. He had a rich dad but no trust fund. He scrapped together a living selling bullshit on his account, a few bucks here and there.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">All dads die eventually though, and so one morning Charles Aubernon...</p>
 </li>
-<li>
-<p class="topLevelItemTitle">ACT I</p>
-<p class="itemText">A DETECTIVE HAS BEEN ASSIGNED A CASE. Fucking sick, yo!!</p>
-</li>
-<hr class="afterText"/>
-<ul>
-<li>
-<p class="itemTitle">Check the case files</p>
-<p class="itemText">What do u know there are three other unexplained suicides</p>
-</li>
-<li>
-<p class="itemTitle">Talk to a begger</p>
-<p class="itemText">Talk to a begger</p>
-</li>
-<li>
-<p class="itemTitle">Visit Austin, learn about Paul st</p>
-<p class="itemText">K but make it not about herbert to start</p>
-</li>
-<li>
-<p class="itemTitle">Learn who Pan is</p>
-<p class="itemText">Mention of Pan in rabbit hole inspires u getting the chance to learn about Pan. You ask your friend Clarke, who is an internet historian, and he is FUCKIN SPOOKED by the question.</p>
-</li>
-</ul>
-<hr class="afterText"/>
-
-<li>
-<p class="topLevelItemTitle">ACT II</p>
-<p class="itemText">Here are some avenues you can investigate once you’ve investigate the first things</p>
-</li>
-<hr class="afterText"/>
-<ul>
-<li>
-<p class="itemTitle">Visit PAUL ST HOUSE</p>
-<p class="itemText">investigate the house on paul st, find the picture of helen</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">clarke doesn’t rly need to be here, you can take the drawing to clarke later?</p>
-</li>
-<li>
-<p class="itemTitle">Ask Austin about Mrs Beaumontj</p>
-<p class="itemText">A short while after the last of these terrible events, Austin came to see Mr. Villiers. He was curious to know whether Villiers had succeeded in discovering any fresh traces of Mrs. Herbert, either through Clarke or by other sources, and he asked the question soon after he had sat down.<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">"No," said Villiers, "I wrote to Clarke, but he remains obdurate, and I have tried other channels, but without any result. I can't find out what became of Helen Vaughan after she left Paul Street, but I think sh...</p>
-</li>
-<li>
-<p class="itemTitle">Helen's old blog post</p>
-<p class="itemText">- An avenue of investigation</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">READER DISCOVERS:</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- Helen’s childhood</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- Rachel</p>
-</li>
-</ul>
-<hr class="afterText"/>
-
-<li>
-<p class="topLevelItemTitle">ACT III</p>
-<p class="itemText">Wrap this shit UP </p>
-</li>
-<hr class="afterText"/>
-<ul>
-<li>
-<p class="itemTitle">Show drawing to Austin</p>
-<p class="itemText">My dude clarke says get off the case</p>
-</li>
-<li>
-<p class="itemTitle">Go to Ashley st</p>
-<p class="itemText">Three weeks later Austin received a note from Villiers, asking him to call either that afternoon or the next. He chose the nearer date, and found Villiers sitting as usual by the window, apparently lost in meditation on the drowsy traffic of the street. There was a bamboo table by his side, a fantastic thing, enriched with gilding and queer painted scenes, and on it lay a little pile of papers arranged and docketed as neatly as anything in Mr. Clarke's office.<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">"Well, Villiers, have you made any...</p>
-</li>
-<li>
-<p class="itemTitle">TheExperiment</p>
-<p class="itemText">- An avenue of investigation</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">READER DISCOVERS</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- Helen’s parentage</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- Raymond is a evil scientist</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- Clarke is a weak-willed fuck</p>
-</li>
-</ul>
-<hr class="afterText"/>
-
-<li>
-<p class="topLevelItemTitle">ACT V</p>
-</li>
-<hr class="afterTitle"/>
-<ul>
-<li>
-<p class="itemTitle">TheFragments</p>
-<p class="itemText">VIII<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">THE FRAGMENTS<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">[Amongst the papers of the well-known physician, Dr. Robert Matheson, of Ashley Street, Piccadilly, who died suddenly, of apoplectic seizure, at the beginning of 1892, a leaf of manuscript paper was found, covered with pencil jottings. These notes were in Latin, much abbreviated, and had evidently been made in great haste. The MS. was only deciphered with difficulty, and some words have up to the present time evaded all the efforts of the expert employed. The date, "XXV Jul....</p>
-</li>
-</ul>
 </ul>
 
 </td>
