--- a/script-1.scriv/QuickLook/Preview.html
+++ b/script-1.scriv/QuickLook/Preview.html
@@ -88,12 +88,30 @@
 
 <ul>
 <li>
+<p class="topLevelItemTitle">VARIABLES</p>
+<p class="itemText">World state management</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Variables</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Some/all should be transparent to the player to some degree—they should know that their choices have consequences. Final variable names don’t matter, just thinking about how they influence the story progression.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>◦ Pan power</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>◦ Chief rage</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>◦ Helen knowledge</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Story structure</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Rabbit Hole<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">@LordArgentine dies</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Investigations</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">These are lines you can investigate. Each of these is relatively linear, but change slightly based on variables</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• Spooky happenings</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- Makes yo...</p>
+</li>
+<li>
 <p class="topLevelItemTitle">Opening</p>
 <p class="itemText">You’re on the case!</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
 <p class="itemText"><p class="p1"><span class="s1">Image of a bathroom mirror with August Villiers’ face looking haggard. The mirror is one of those dumb “smart” mirrors with an electronic message from @Cheif on it.</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Good morning, Detective August Villiers. You’ve just finished up a really boring case for the bureau yesterday morning and maybe celebrated a teensy bit too hard last night at TK CLUB NAME. You’re known (but not really loved at work per say) for your paranormal investigations and you look really good in silhouet...</p>
+<p class="itemText"><p class="p1"><span class="s1">Good morning, Detective August Villiers. You’ve just finished up a really boring case for the bureau yesterday morning and maybe celebrated a teensy bit too hard last night at TK CLUB NAME. You’re known (but not really loved, per say)<span class="Apple-converted-space">  </span>at work for your paranormal investigations and you look really good in silhou...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">RABBIT-HOLE-1</p>
