continues to work on script, adds skeletal twine file for script

--- a/script-1.scriv/QuickLook/Preview.html
+++ b/script-1.scriv/QuickLook/Preview.html
@@ -96,17 +96,26 @@
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>◦ Chief rage</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>◦ Helen knowledge</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Story structure</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Rabbit Hole<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">@LordArgentine dies</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Available characters</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Always available:</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>◦ Chief<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>◦ Austin (can be murdered??)</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Investigations</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">These are lines you can investigate. Each of these is relatively linear, but change slightly based on variables</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>• Spooky happenings</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">- Makes yo...</p>
+<p class="itemText"><p class="p1"><span class="s1">Sometimes available:</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>◦ Herbert (availability window)</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>◦ Helen (must be unlocked)</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>◦ Clarke (must be unlocked)</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Story structure</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">...</p>
 </li>
 <li>
-<p class="topLevelItemTitle">Opening</p>
+<p class="topLevelItemTitle">BEGIN</p>
+</li>
+<hr class="afterTitle"/>
+<ul>
+<li>
+<p class="itemTitle">Opening</p>
 <p class="itemText">You’re on the case!</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
 <p class="itemText"><p class="p1"><span class="s1">Image of a bathroom mirror with August Villiers’ face looking haggard. The mirror is one of those dumb “smart” mirrors with an electronic message from @Cheif on it.</span></p></p>
@@ -114,7 +123,7 @@
 <p class="itemText"><p class="p1"><span class="s1">Good morning, Detective August Villiers. You’ve just finished up a really boring case for the bureau yesterday morning and maybe celebrated a teensy bit too hard last night at TK CLUB NAME. You’re known (but not really loved, per say)<span class="Apple-converted-space">  </span>at work for your paranormal investigations and you look really good in silhou...</p>
 </li>
 <li>
-<p class="topLevelItemTitle">RABBIT-HOLE-1</p>
+<p class="itemTitle">RABBIT-HOLE-1</p>
 <p class="itemText">The death of @LordArgentine</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">Image of newspaper with headline “XYZ” and a secondary headline that is dependent on the chaos meter</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">The chief bombards you with a newspaper basically as you walk in the door. “You’ve SEEN THIS, RIGHT????”</span></p></p>
@@ -122,6 +131,72 @@
 <p class="itemText"><p class="p1"><span class="s1">@LordArgentine was a great favorite on the internet. He had a rich dad but no trust fund. He scrapped together a living selling bullshit on his account, a few bucks here and there.</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">All dads die eventually though, and so one morning Charles Aubernon...</p>
 </li>
+</ul>
+<hr class="afterText"/>
+
+<li>
+<p class="topLevelItemTitle">INVESTIGATION</p>
+</li>
+<hr class="afterTitle"/>
+<ul>
+<li>
+<p class="folderTitle">Socialites</p>
+</li>
+<hr class="afterTitle"/>
+<ul>
+<li>
+<p class="itemTitle">1. Talk to Austin</p>
+<p class="itemText">Talk with Austin to learn about socialites</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">He tells u the fuckin juicy shit yo</p>
+</li>
+</ul>
+<hr class="afterText"/>
+
+<li>
+<p class="folderTitle">Spooky stuff</p>
+</li>
+<hr class="afterTitle"/>
+<ul>
+<li>
+<p class="itemTitle">1. Visit Herbert in Jail</p>
+<p class="itemText">Visit Herbert to talk about spooky stuff</p>
+</li>
+</ul>
+<hr class="afterText"/>
+
+<li>
+<p class="folderTitle">Your love life</p>
+</li>
+<hr class="afterTitle"/>
+<ul>
+<li>
+<p class="itemTitle">1. Go back to the club</p>
+<p class="itemText">Try to figure out who you danced with last night in the club</p>
+</li>
+</ul>
+</ul>
+<hr class="afterText"/>
+
+<li>
+<p class="topLevelItemTitle">END</p>
+</li>
+<hr class="afterTitle"/>
+<ul>
+<li>
+<p class="itemTitle">Off the force</p>
+<p class="itemText">The chief told you he would throw you off the force!!</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Should include some like warnings in here that can appear</p>
+</li>
+<li>
+<p class="itemTitle">Pan gets u</p>
+<p class="itemText">Helen brough you straight to Pan, why were you so heckin seduceable?</p>
+</li>
+<li>
+<p class="itemTitle">You kill helen</p>
+<p class="itemText">You kill helen. It’s kind of sad if you really think about it.</p>
+</li>
+</ul>
 </ul>
 
 </td>
