adds new sections to act 1

--- a/CODE/twine-peaks.html
+++ b/CODE/twine-peaks.html
@@ -14,20 +14,24 @@
 <tw-storydata name="twine-peaks" startnode="8" creator="Twine" creator-version="2.3.1" ifid="4EC35658-C976-4414-BA81-0EDE28A8DE6A" zoom="1" format="Harlowe" format-version="3.0.2" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">.obit {
   font-family: monospace;
 }
+
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
+
 </script><tw-passagedata pid="1" name="Open the message from @theChief" tags="" position="367,502" size="100,100">VILLIERS–WE GOT ANOTHER SELF-ASSASINATION ON OUR HANDS, GET DOWN HERE NOW!!
 
 $crimes
 
 [[Yeesh-&gt;Opening]] </tw-passagedata><tw-passagedata pid="2" name="Smell your clothes from last night" tags="" position="517,505" size="100,100">Your clothes from last night smell like someone else’s perfume—floral and earthy. You’d never call yourself an outdoorsperson, but it’s somehow intoxicating? You remember a lane of arching willow trees from your youth and everything seems a little bit fresher and greener. You try to remember the woman you danced with last night at TK CLUB NAME, but she eludes you. Maybe you followed her online?
 
-[[Opening]] </tw-passagedata><tw-passagedata pid="3" name="Rabbit Hole" tags="" position="679,596" size="100,100">&lt;i&gt;Image of newspaper with headline “XYZ” and a secondary headline that is dependent on the chaos meter&lt;/i&gt;
+[[Opening]] </tw-passagedata><tw-passagedata pid="3" name="Rabbit Hole" tags="" position="680,596" size="100,100">&lt;i&gt;Image of newspaper with headline “XYZ” and a secondary headline that is dependent on the chaos meter&lt;/i&gt;
 
 The chief bombards you with a newspaper basically as you walk in the door. “You’ve SEEN THIS, RIGHT????”
 
 [[Read the obituary-&gt;Argentine Obituary]]
 [[&quot;Ugh I thought we decided I was only on spooky cases from now on&quot;-&gt;Not Spooky]]
-[[Pretend to read it, but actually read the secondary headline-&gt;Herbert Article]]</tw-passagedata><tw-passagedata pid="4" name="Argentine Obituary" tags="" position="525,930" size="100,100">&lt;div class=&quot;obit&quot;&gt;
+[[Pretend to read it, but actually read the secondary headline-&gt;Herbert Article]]</tw-passagedata><tw-passagedata pid="4" name="Argentine Obituary" tags="" position="546,760" size="100,100">&lt;div class=&quot;obit&quot;&gt;
 @LordArgentine was a great favorite on the internet. He had a rich dad but no trust fund. He scrapped together a living selling bullshit on his account, a few bucks here and there.
 
 All dads die eventually though, and so one morning Charles Aubernon woke up and found that @LordArgentine was no longer a handle, but the title of a wealthy man. The situation amused him immensely, and he resolved that riches should be as pleasant to him as “poverty” had always been. Argentine, after some consideration, came to the conclusion that dining, regarded as a fine art, was perhaps the most amusing pursuit open to fallen humanity, and thus his dinners became famous online, and an invitation to his table a thing covetously desired. 
@@ -36,19 +40,72 @@ After several cycles of lordship and dinners Argentine still declined to be jade
 &lt;/div&gt;
 
 [[Did you know this guy or something?]]
-[[Read the secondary article-&gt;Herbert Article]] </tw-passagedata><tw-passagedata pid="5" name="Not Spooky" tags="" position="672,763" size="100,100">@Chief: Do I look like I think literally anything is spooky??? The internet socialites are ALL SAUCED UP over this and their shareholders basically own the force! Get this out of the papers and into the closed case files, Villiers, or you’re off the force!! 
+[[Read the secondary article-&gt;Herbert Article]] </tw-passagedata><tw-passagedata pid="5" name="Not Spooky" tags="" position="678,764" size="100,100">@Chief: Do I look like I think literally anything is spooky??? The internet socialites are ALL SAUCED UP over this and their shareholders basically own the force! Get this out of the papers and into the closed case files, Villiers, or you’re off the force!! 
 
 The Chief thrusts the paper into your coffee. You use it to blot the spilled coffee unnecessarily off your black jacket.
 
-[[Through the bleeding ink you reluctantly read-&gt;Argentine Obituary]] </tw-passagedata><tw-passagedata pid="6" name="Herbert Article" tags="" position="822,763" size="100,100">Article about your friend Herbert from college being arrested again and it REEKS OF SPOOK
+[[Through the bleeding ink you reluctantly read-&gt;Argentine Obituary]] </tw-passagedata><tw-passagedata pid="6" name="Herbert Article" tags="" position="822,761" size="100,100">Article about your friend Herbert from college being arrested again and it REEKS OF SPOOK
 
-[[Riding high on spooky stuff, read the obit-&gt;Argentine Obituary]] </tw-passagedata><tw-passagedata pid="7" name="Variables" tags="startup" position="776,349.5" size="100,100">(set: $crimes to 5)</tw-passagedata><tw-passagedata pid="8" name="Opening" tags="" position="498,350.5" size="100,100">&lt;i&gt;Image of a bathroom mirror with August Villiers’ face looking haggard. The mirror is one of those dumb “smart” mirrors with an electronic message from @Cheif on it.&lt;/i&gt;
+[[Riding high on spooky stuff, read the obit-&gt;Argentine Obituary]] </tw-passagedata><tw-passagedata pid="7" name="Variables" tags="startup" position="776,349" size="100,100">{
+&lt;!--Main game state--&gt;
+(set: $crimes to 5)
+(set: $chaos to 0)
+&lt;!--Acts--&gt;
+(set: $act1Complete to false)
+&lt;!--Act 1 touchpoints--&gt;
+(set: $clarkeSuggestion to false)
+(set: $herbVisit1 to false)
+}</tw-passagedata><tw-passagedata pid="8" name="Opening" tags="" position="498,350" size="100,100">&lt;i&gt;Image of a bathroom mirror with August Villiers’ face looking haggard. The mirror is one of those dumb “smart” mirrors with an electronic message from @Cheif on it.&lt;/i&gt;
 
 Good morning, Detective August Villiers. You’ve just finished up a really boring case for the bureau yesterday morning and maybe celebrated a teensy bit too hard last night at TK CLUB NAME. You’re known (but not really loved, per say)  at work for your paranormal investigations and you look really good in silhouette. Maybe you’re born with it, maybe it’s the hat and cape.
 
 [[Open the message from @theChief]] 
 [[Smell your clothes from last night]] 
-[[Go straight to work without brushing your teeth you filthy animal-&gt;Rabbit Hole]]</tw-passagedata><tw-passagedata pid="9" name="Did you know this guy or something?" tags="" position="416,1075" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
+[[Go straight to work without brushing your teeth you filthy animal-&gt;Rabbit Hole]]</tw-passagedata><tw-passagedata pid="9" name="Did you know this guy or something?" tags="" position="684,892" size="100,100">@Chief: Do I look like I use the Webternet??? All I know is the whole lot of them are ALL SAUCED UP over this and their Shareholders basically own the force! Why don’t you ask your video-logger friend TK AUSTIN. Get this out of the papers and into the closed case files, Villiers!
+
+[[Get to work-&gt;StationHub]] </tw-passagedata><tw-passagedata pid="10" name="Austin1" tags="" position="777,1218" size="100,100">INTRO: Yo what up Austin. Let&#39;s get some bg on Austin, Villiers, and their relationship.
+
+[[Ask about Lord Argentine-&gt;Austin1-1]]
+[[Ask about the perfume left on your coat-&gt;Austin1-2]]
+[[Ask about Herbert-&gt;Austin1-3]]
+[[Ask about Pan (if you have already talked to Herbert)-&gt;Austin1-4]]
+[[Actually I&#39;d better come back later-&gt;StationHub]] </tw-passagedata><tw-passagedata pid="11" name="Herbert1" tags="" position="341,1224" size="100,100">{
+(set: $herbVisit1 to true)
+}Herbert is in jail and that is a big bummer for him.</tw-passagedata><tw-passagedata pid="12" name="LoveLife1" tags="" position="1184,1218" size="100,100">Visit the TK CLUB NAME from last night.
+
+[[Search for clues-&gt;LoveLife1-1]]
+[[Ask to speak to the proprietor-&gt;LoveLife1-2]]</tw-passagedata><tw-passagedata pid="13" name="Austin1-1" tags="" position="589,1382" size="100,100">O yea he’s super dead. It’s like he was like just too good, you know? Except for all his sucky qualities I mean.
+
+Anymore info about Argentine??
+
+[[Austin1]] </tw-passagedata><tw-passagedata pid="14" name="Austin1-2" tags="" position="712,1382" size="100,100">I’d recognize that eau do toilets anywhere—that’s @mrsbeumont’s perfume. It’s wild right?? Like when you smell it everything seems a little bit…greener, fresher! Like some kind of totally non electronic experience. Ya dig it? Let’s both smell it together
+
+[[Smell the perfume together-&gt;Austin1-2A]]
+[[I have a few more questions first-&gt;Austin1]] </tw-passagedata><tw-passagedata pid="15" name="Austin1-3" tags="" position="839,1381" size="100,100">Soooooo what&#39;s up with Herbert being in jail? He always seemed like such a straight shooter, even going into real estate with his pops when he really wanted to go on tour with that punk band after college. I thought he was doing really well for himself, last I knew he was still hanging around your crowd. Did his ol&#39; dadderino disown him after all?
+
+&quot;OH HONEY, NO. It was that AWFUL MURDER in Paul street!!&quot;
+
+[[Murder in Paul street??-&gt;Austin1-3A]]
+[[Huh, weird. Well that can&#39;t possibly be related to this other socialite murder I&#39;m currently investigating-&gt;Austin1]]</tw-passagedata><tw-passagedata pid="16" name="Austin1-4" tags="" position="963,1381" size="100,100">{
+(set: $clarkeSuggestion to true)
+}Yeah you’re going to have to find someone way, way nerdier than me to talk with about that. Like, wayyy nerdier. Aren&#39;t you &quot;friends&quot; with that librarian, Clarke? Don’t even tell anyone you asked me, unless you&#39;re ready to fork over Clarke&#39;s username, you bad ombre. Oops I’m filming, byeeeeeeeee!
+
+[[Back to the drawing board-&gt;StationHub]]</tw-passagedata><tw-passagedata pid="17" name="Austin1-2A" tags="" position="709,1526" size="100,100">Wow what a smell
+
+[[Where can I find out more about @mrsbeumont?-&gt;Austin1-2B]]
+[[I have a few more questions...-&gt;Austin1]]</tw-passagedata><tw-passagedata pid="18" name="StationHub" tags="" position="770,1041" size="100,100">[[Talk with Austin to learn about socialites-&gt;Austin1]]
+[[Visit Herbert to talk about spooky stuff-&gt;Herbert1]]
+[[Try to figure out who you danced with last night in the club-&gt;LoveLife1]]
+(if: $clarkeSuggestion is true)[[Go visit your nerdy &quot;friend&quot; Clarke-&gt;Clarke1]]</tw-passagedata><tw-passagedata pid="19" name="Austin1-2B" tags="" position="711,1658" size="100,100">Follow her, silly!!!
+
+Follow @mrsbeaumont -- now you get random beaumont updates??
+[[I have a few more questions...-&gt;Austin1]]</tw-passagedata><tw-passagedata pid="20" name="Austin1-3A" tags="" position="843,1526" size="100,100">Some shit about the Paul street murder.
+
+[[Cool story-&gt;StationHub]] </tw-passagedata><tw-passagedata pid="21" name="Clarke1" tags="" position="1550,1214" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="22" name="LoveLife1-1" tags="" position="1127,1369" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="23" name="LoveLife1-2" tags="" position="1259,1368" size="100,100">Hello, yes I&#39;m the proprietor—hey wait a minute! Aren&#39;t you that joker that was here a couple weeks ago with that vlogger, @AustinFamilyJewels, painting dicks on the walls of all three bathrooms with glow paint??
+
+[[(Conceal the glow paint stain on your cape with a flourish) Definitely not, and to be honest I&#39;m low-key offended you would even ask.-&gt;LoveLife1-2A]]
+[[Whoops look at the time, I&#39;d better be going...-&gt;StationHub]]
+[[Yes, but like I said at the time, I&#39;m really, really sorry about it and I don&#39;t do psychadelics anymore, scout&#39;s honor-&gt;LoveLife1-2B]]</tw-passagedata><tw-passagedata pid="24" name="LoveLife1-2A" tags="" position="1259,1518" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="25" name="LoveLife1-2B" tags="" position="1379,1518" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
