--- a/script-1.scriv/QuickLook/Preview.html
+++ b/script-1.scriv/QuickLook/Preview.html
@@ -147,7 +147,13 @@
 <li>
 <p class="itemTitle">1. Talk to Austin</p>
 <p class="itemText">Talk with Austin to learn about socialites</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">He tells u the fuckin juicy shit yo</p>
+<p class="itemText"><p class="p1"><span class="s1">INTRO: Yo what up Austin</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Ask about Lord Argentine</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- O yea he’s super dead. It’s like he was like just too good, you know? Except for all his sucky qualities I mean.</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Ask about the perfume left on your coat</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- I’d recognize that eau do toilets anywhere—that’s @mrsbeumont’s perfume. It’s wild right?? Like when you smell it everything seems a little bit…greener, fresher! Like some kind of totally non electronic experience. Ya dig it? Let’s both smell it to...</p>
 </li>
 </ul>
 <hr class="afterText"/>
